parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> exp
Rule 1     exp -> frac_exp
Rule 2     exp -> float_exp
Rule 3     exp -> poly_exp
Rule 4     exp -> vector_exp
Rule 5     exp -> interp_exp
Rule 6     exp -> lstsq_exp
Rule 7     exp -> poly_atom frac_atom
Rule 8     exp -> poly_atom S LPAREN INT COMMA INT RPAREN
Rule 9     exp -> poly_atom I LPAREN INT COMMA INT RPAREN
Rule 10    interp_exp -> IP point_list
Rule 11    interp_exp -> IP INT point_list
Rule 12    lstsq_exp -> LS point_list
Rule 13    lstsq_exp -> LS MINUS point_list
Rule 14    frac_exp -> frac_exp PLUS frac_term
Rule 15    frac_exp -> frac_exp MINUS frac_term
Rule 16    frac_exp -> frac_term
Rule 17    frac_term -> frac_term TIMES frac_atom
Rule 18    frac_term -> frac_term DIVIDE frac_atom
Rule 19    frac_term -> frac_atom
Rule 20    frac_atom -> int_function
Rule 21    frac_atom -> num
Rule 22    frac_atom -> LPAREN frac_exp RPAREN
Rule 23    poly_exp -> poly_exp PLUS poly_term
Rule 24    poly_exp -> poly_exp MINUS poly_term
Rule 25    poly_exp -> poly_term
Rule 26    poly_exp -> D poly_atom
Rule 27    poly_exp -> I poly_atom
Rule 28    poly_term -> poly_term TIMES poly_atom
Rule 29    poly_term -> poly_atom
Rule 30    poly_atom -> num X INT
Rule 31    poly_atom -> LPAREN poly_exp RPAREN
Rule 32    float_exp -> frac_exp PLUS float_term
Rule 33    float_exp -> frac_exp MINUS float_term
Rule 34    float_exp -> float_exp PLUS frac_term
Rule 35    float_exp -> float_exp MINUS frac_term
Rule 36    float_exp -> float_exp PLUS float_term
Rule 37    float_exp -> float_exp MINUS float_term
Rule 38    float_exp -> float_term
Rule 39    float_term -> frac_term TIMES float_atom
Rule 40    float_term -> frac_term DIVIDE float_atom
Rule 41    float_term -> float_term TIMES frac_atom
Rule 42    float_term -> float_term DIVIDE frac_atom
Rule 43    float_term -> float_term TIMES float_atom
Rule 44    float_term -> float_term DIVIDE float_atom
Rule 45    float_term -> float_atom
Rule 46    float_atom -> unary_function
Rule 47    float_atom -> binary_function
Rule 48    float_atom -> trig_function
Rule 49    float_atom -> LPAREN float_exp RPAREN
Rule 50    float_atom -> COMPLEX
Rule 51    unary_function -> FUN LPAREN exp RPAREN
Rule 52    binary_function -> FUN LPAREN exp COMMA exp RPAREN
Rule 53    int_function -> INTFUN LPAREN INT COMMA INT RPAREN
Rule 54    fraction_expr -> FRAC LPAREN frac_exp COMMA frac_exp RPAREN
Rule 55    trig_function -> TRIGFUN LPAREN exp RPAREN
Rule 56    trig_function -> TRIGFUN LPAREN deg RPAREN
Rule 57    vector_exp -> vector_exp PLUS vector_cross
Rule 58    vector_exp -> vector_exp MINUS vector_cross
Rule 59    vector_exp -> vector_cross
Rule 60    vector_cross -> vector_cross TIMES vector
Rule 61    vector_cross -> vector_cross TIMES num
Rule 62    vector_cross -> vector
Rule 63    vector -> vector_builder RBRACK
Rule 64    vector_builder -> vector_builder COMMA num
Rule 65    vector_builder -> LBRACK num
Rule 66    point_list -> point_list_builder RBRACK
Rule 67    point_list_builder -> point_list_builder COMMA LPAREN num COMMA num RPAREN
Rule 68    point_list_builder -> LBRACK LPAREN num COMMA num RPAREN
Rule 69    num -> INT
Rule 70    num -> FLOAT
Rule 71    num -> fraction_expr
Rule 72    num -> MINUS INT
Rule 73    num -> MINUS FLOAT
Rule 74    num -> MINUS fraction_expr
Rule 75    num -> INT EXL
Rule 76    num -> num EXP INT
Rule 77    num -> num EXP MINUS INT
Rule 78    num -> vector vector
Rule 79    deg -> INT DEGREE
Rule 80    deg -> FLOAT DEGREE

Terminals, with rules where they appear

COMMA                : 8 9 52 53 54 64 67 67 68
COMPLEX              : 50
D                    : 26
DEGREE               : 79 80
DIVIDE               : 18 40 42 44
EXL                  : 75
EXP                  : 76 77
FLOAT                : 70 73 80
FRAC                 : 54
FUN                  : 51 52
I                    : 9 27
INT                  : 8 8 9 9 11 30 53 53 69 72 75 76 77 79
INTFUN               : 53
IP                   : 10 11
LBRACK               : 65 68
LPAREN               : 8 9 22 31 49 51 52 53 54 55 56 67 68
LS                   : 12 13
MINUS                : 13 15 24 33 35 37 58 72 73 74 77
PLUS                 : 14 23 32 34 36 57
RBRACK               : 63 66
RPAREN               : 8 9 22 31 49 51 52 53 54 55 56 67 68
S                    : 8
TIMES                : 17 28 39 41 43 60 61
TRIGFUN              : 55 56
X                    : 30
error                : 

Nonterminals, with rules where they appear

binary_function      : 47
deg                  : 56
exp                  : 51 52 52 55 0
float_atom           : 39 40 43 44 45
float_exp            : 2 34 35 36 37 49
float_term           : 32 33 36 37 38 41 42 43 44
frac_atom            : 7 17 18 19 41 42
frac_exp             : 1 14 15 22 32 33 54 54
frac_term            : 14 15 16 17 18 34 35 39 40
fraction_expr        : 71 74
int_function         : 20
interp_exp           : 5
lstsq_exp            : 6
num                  : 21 30 61 64 65 67 67 68 68 76 77
point_list           : 10 11 12 13
point_list_builder   : 66 67
poly_atom            : 7 8 9 26 27 28 29
poly_exp             : 3 23 24 31
poly_term            : 23 24 25 28
trig_function        : 48
unary_function       : 46
vector               : 60 62 78 78
vector_builder       : 63 64
vector_cross         : 57 58 59 60 61
vector_exp           : 4 57 58

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . frac_exp
    (2) exp -> . float_exp
    (3) exp -> . poly_exp
    (4) exp -> . vector_exp
    (5) exp -> . interp_exp
    (6) exp -> . lstsq_exp
    (7) exp -> . poly_atom frac_atom
    (8) exp -> . poly_atom S LPAREN INT COMMA INT RPAREN
    (9) exp -> . poly_atom I LPAREN INT COMMA INT RPAREN
    (14) frac_exp -> . frac_exp PLUS frac_term
    (15) frac_exp -> . frac_exp MINUS frac_term
    (16) frac_exp -> . frac_term
    (32) float_exp -> . frac_exp PLUS float_term
    (33) float_exp -> . frac_exp MINUS float_term
    (34) float_exp -> . float_exp PLUS frac_term
    (35) float_exp -> . float_exp MINUS frac_term
    (36) float_exp -> . float_exp PLUS float_term
    (37) float_exp -> . float_exp MINUS float_term
    (38) float_exp -> . float_term
    (23) poly_exp -> . poly_exp PLUS poly_term
    (24) poly_exp -> . poly_exp MINUS poly_term
    (25) poly_exp -> . poly_term
    (26) poly_exp -> . D poly_atom
    (27) poly_exp -> . I poly_atom
    (57) vector_exp -> . vector_exp PLUS vector_cross
    (58) vector_exp -> . vector_exp MINUS vector_cross
    (59) vector_exp -> . vector_cross
    (10) interp_exp -> . IP point_list
    (11) interp_exp -> . IP INT point_list
    (12) lstsq_exp -> . LS point_list
    (13) lstsq_exp -> . LS MINUS point_list
    (30) poly_atom -> . num X INT
    (31) poly_atom -> . LPAREN poly_exp RPAREN
    (17) frac_term -> . frac_term TIMES frac_atom
    (18) frac_term -> . frac_term DIVIDE frac_atom
    (19) frac_term -> . frac_atom
    (39) float_term -> . frac_term TIMES float_atom
    (40) float_term -> . frac_term DIVIDE float_atom
    (41) float_term -> . float_term TIMES frac_atom
    (42) float_term -> . float_term DIVIDE frac_atom
    (43) float_term -> . float_term TIMES float_atom
    (44) float_term -> . float_term DIVIDE float_atom
    (45) float_term -> . float_atom
    (28) poly_term -> . poly_term TIMES poly_atom
    (29) poly_term -> . poly_atom
    (60) vector_cross -> . vector_cross TIMES vector
    (61) vector_cross -> . vector_cross TIMES num
    (62) vector_cross -> . vector
    (69) num -> . INT
    (70) num -> . FLOAT
    (71) num -> . fraction_expr
    (72) num -> . MINUS INT
    (73) num -> . MINUS FLOAT
    (74) num -> . MINUS fraction_expr
    (75) num -> . INT EXL
    (76) num -> . num EXP INT
    (77) num -> . num EXP MINUS INT
    (78) num -> . vector vector
    (20) frac_atom -> . int_function
    (21) frac_atom -> . num
    (22) frac_atom -> . LPAREN frac_exp RPAREN
    (46) float_atom -> . unary_function
    (47) float_atom -> . binary_function
    (48) float_atom -> . trig_function
    (49) float_atom -> . LPAREN float_exp RPAREN
    (50) float_atom -> . COMPLEX
    (63) vector -> . vector_builder RBRACK
    (54) fraction_expr -> . FRAC LPAREN frac_exp COMMA frac_exp RPAREN
    (53) int_function -> . INTFUN LPAREN INT COMMA INT RPAREN
    (51) unary_function -> . FUN LPAREN exp RPAREN
    (52) binary_function -> . FUN LPAREN exp COMMA exp RPAREN
    (55) trig_function -> . TRIGFUN LPAREN exp RPAREN
    (56) trig_function -> . TRIGFUN LPAREN deg RPAREN
    (64) vector_builder -> . vector_builder COMMA num
    (65) vector_builder -> . LBRACK num

    D               shift and go to state 6
    I               shift and go to state 30
    IP              shift and go to state 4
    LS              shift and go to state 15
    LPAREN          shift and go to state 3
    INT             shift and go to state 23
    FLOAT           shift and go to state 36
    MINUS           shift and go to state 5
    COMPLEX         shift and go to state 26
    FRAC            shift and go to state 8
    INTFUN          shift and go to state 7
    FUN             shift and go to state 24
    TRIGFUN         shift and go to state 1
    LBRACK          shift and go to state 19

    poly_exp                       shift and go to state 2
    fraction_expr                  shift and go to state 21
    frac_exp                       shift and go to state 22
    int_function                   shift and go to state 16
    poly_term                      shift and go to state 18
    trig_function                  shift and go to state 33
    vector                         shift and go to state 14
    binary_function                shift and go to state 27
    vector_builder                 shift and go to state 20
    unary_function                 shift and go to state 28
    frac_atom                      shift and go to state 9
    vector_exp                     shift and go to state 29
    interp_exp                     shift and go to state 10
    lstsq_exp                      shift and go to state 31
    num                            shift and go to state 11
    float_exp                      shift and go to state 12
    poly_atom                      shift and go to state 32
    float_term                     shift and go to state 13
    float_atom                     shift and go to state 35
    exp                            shift and go to state 34
    vector_cross                   shift and go to state 25
    frac_term                      shift and go to state 17

state 1

    (55) trig_function -> TRIGFUN . LPAREN exp RPAREN
    (56) trig_function -> TRIGFUN . LPAREN deg RPAREN

    LPAREN          shift and go to state 37


state 2

    (3) exp -> poly_exp .
    (23) poly_exp -> poly_exp . PLUS poly_term
    (24) poly_exp -> poly_exp . MINUS poly_term

    $end            reduce using rule 3 (exp -> poly_exp .)
    RPAREN          reduce using rule 3 (exp -> poly_exp .)
    COMMA           reduce using rule 3 (exp -> poly_exp .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 38


state 3

    (31) poly_atom -> LPAREN . poly_exp RPAREN
    (22) frac_atom -> LPAREN . frac_exp RPAREN
    (49) float_atom -> LPAREN . float_exp RPAREN
    (23) poly_exp -> . poly_exp PLUS poly_term
    (24) poly_exp -> . poly_exp MINUS poly_term
    (25) poly_exp -> . poly_term
    (26) poly_exp -> . D poly_atom
    (27) poly_exp -> . I poly_atom
    (14) frac_exp -> . frac_exp PLUS frac_term
    (15) frac_exp -> . frac_exp MINUS frac_term
    (16) frac_exp -> . frac_term
    (32) float_exp -> . frac_exp PLUS float_term
    (33) float_exp -> . frac_exp MINUS float_term
    (34) float_exp -> . float_exp PLUS frac_term
    (35) float_exp -> . float_exp MINUS frac_term
    (36) float_exp -> . float_exp PLUS float_term
    (37) float_exp -> . float_exp MINUS float_term
    (38) float_exp -> . float_term
    (28) poly_term -> . poly_term TIMES poly_atom
    (29) poly_term -> . poly_atom
    (17) frac_term -> . frac_term TIMES frac_atom
    (18) frac_term -> . frac_term DIVIDE frac_atom
    (19) frac_term -> . frac_atom
    (39) float_term -> . frac_term TIMES float_atom
    (40) float_term -> . frac_term DIVIDE float_atom
    (41) float_term -> . float_term TIMES frac_atom
    (42) float_term -> . float_term DIVIDE frac_atom
    (43) float_term -> . float_term TIMES float_atom
    (44) float_term -> . float_term DIVIDE float_atom
    (45) float_term -> . float_atom
    (30) poly_atom -> . num X INT
    (31) poly_atom -> . LPAREN poly_exp RPAREN
    (20) frac_atom -> . int_function
    (21) frac_atom -> . num
    (22) frac_atom -> . LPAREN frac_exp RPAREN
    (46) float_atom -> . unary_function
    (47) float_atom -> . binary_function
    (48) float_atom -> . trig_function
    (49) float_atom -> . LPAREN float_exp RPAREN
    (50) float_atom -> . COMPLEX
    (69) num -> . INT
    (70) num -> . FLOAT
    (71) num -> . fraction_expr
    (72) num -> . MINUS INT
    (73) num -> . MINUS FLOAT
    (74) num -> . MINUS fraction_expr
    (75) num -> . INT EXL
    (76) num -> . num EXP INT
    (77) num -> . num EXP MINUS INT
    (78) num -> . vector vector
    (53) int_function -> . INTFUN LPAREN INT COMMA INT RPAREN
    (51) unary_function -> . FUN LPAREN exp RPAREN
    (52) binary_function -> . FUN LPAREN exp COMMA exp RPAREN
    (55) trig_function -> . TRIGFUN LPAREN exp RPAREN
    (56) trig_function -> . TRIGFUN LPAREN deg RPAREN
    (54) fraction_expr -> . FRAC LPAREN frac_exp COMMA frac_exp RPAREN
    (63) vector -> . vector_builder RBRACK
    (64) vector_builder -> . vector_builder COMMA num
    (65) vector_builder -> . LBRACK num

    D               shift and go to state 6
    I               shift and go to state 30
    LPAREN          shift and go to state 3
    COMPLEX         shift and go to state 26
    INT             shift and go to state 23
    FLOAT           shift and go to state 36
    MINUS           shift and go to state 5
    INTFUN          shift and go to state 7
    FUN             shift and go to state 24
    TRIGFUN         shift and go to state 1
    FRAC            shift and go to state 8
    LBRACK          shift and go to state 19

    unary_function                 shift and go to state 28
    vector_builder                 shift and go to state 20
    poly_exp                       shift and go to state 40
    fraction_expr                  shift and go to state 21
    frac_atom                      shift and go to state 9
    poly_atom                      shift and go to state 43
    int_function                   shift and go to state 16
    poly_term                      shift and go to state 18
    num                            shift and go to state 44
    trig_function                  shift and go to state 33
    float_atom                     shift and go to state 35
    frac_exp                       shift and go to state 41
    float_term                     shift and go to state 13
    float_exp                      shift and go to state 45
    vector                         shift and go to state 42
    binary_function                shift and go to state 27
    frac_term                      shift and go to state 17

state 4

    (10) interp_exp -> IP . point_list
    (11) interp_exp -> IP . INT point_list
    (66) point_list -> . point_list_builder RBRACK
    (67) point_list_builder -> . point_list_builder COMMA LPAREN num COMMA num RPAREN
    (68) point_list_builder -> . LBRACK LPAREN num COMMA num RPAREN

    INT             shift and go to state 48
    LBRACK          shift and go to state 46

    point_list_builder             shift and go to state 49
    point_list                     shift and go to state 47

state 5

    (72) num -> MINUS . INT
    (73) num -> MINUS . FLOAT
    (74) num -> MINUS . fraction_expr
    (54) fraction_expr -> . FRAC LPAREN frac_exp COMMA frac_exp RPAREN

    INT             shift and go to state 50
    FLOAT           shift and go to state 52
    FRAC            shift and go to state 8

    fraction_expr                  shift and go to state 51

state 6

    (26) poly_exp -> D . poly_atom
    (30) poly_atom -> . num X INT
    (31) poly_atom -> . LPAREN poly_exp RPAREN
    (69) num -> . INT
    (70) num -> . FLOAT
    (71) num -> . fraction_expr
    (72) num -> . MINUS INT
    (73) num -> . MINUS FLOAT
    (74) num -> . MINUS fraction_expr
    (75) num -> . INT EXL
    (76) num -> . num EXP INT
    (77) num -> . num EXP MINUS INT
    (78) num -> . vector vector
    (54) fraction_expr -> . FRAC LPAREN frac_exp COMMA frac_exp RPAREN
    (63) vector -> . vector_builder RBRACK
    (64) vector_builder -> . vector_builder COMMA num
    (65) vector_builder -> . LBRACK num

    LPAREN          shift and go to state 53
    INT             shift and go to state 23
    FLOAT           shift and go to state 36
    MINUS           shift and go to state 5
    FRAC            shift and go to state 8
    LBRACK          shift and go to state 19

    num                            shift and go to state 55
    fraction_expr                  shift and go to state 21
    vector                         shift and go to state 42
    poly_atom                      shift and go to state 54
    vector_builder                 shift and go to state 20

state 7

    (53) int_function -> INTFUN . LPAREN INT COMMA INT RPAREN

    LPAREN          shift and go to state 56


state 8

    (54) fraction_expr -> FRAC . LPAREN frac_exp COMMA frac_exp RPAREN

    LPAREN          shift and go to state 57


state 9

    (19) frac_term -> frac_atom .

    TIMES           reduce using rule 19 (frac_term -> frac_atom .)
    DIVIDE          reduce using rule 19 (frac_term -> frac_atom .)
    RPAREN          reduce using rule 19 (frac_term -> frac_atom .)
    PLUS            reduce using rule 19 (frac_term -> frac_atom .)
    MINUS           reduce using rule 19 (frac_term -> frac_atom .)
    COMMA           reduce using rule 19 (frac_term -> frac_atom .)
    $end            reduce using rule 19 (frac_term -> frac_atom .)


state 10

    (5) exp -> interp_exp .

    $end            reduce using rule 5 (exp -> interp_exp .)
    RPAREN          reduce using rule 5 (exp -> interp_exp .)
    COMMA           reduce using rule 5 (exp -> interp_exp .)


state 11

    (30) poly_atom -> num . X INT
    (76) num -> num . EXP INT
    (77) num -> num . EXP MINUS INT
    (21) frac_atom -> num .

    X               shift and go to state 59
    EXP             shift and go to state 58
    TIMES           reduce using rule 21 (frac_atom -> num .)
    DIVIDE          reduce using rule 21 (frac_atom -> num .)
    PLUS            reduce using rule 21 (frac_atom -> num .)
    MINUS           reduce using rule 21 (frac_atom -> num .)
    $end            reduce using rule 21 (frac_atom -> num .)
    RPAREN          reduce using rule 21 (frac_atom -> num .)
    COMMA           reduce using rule 21 (frac_atom -> num .)


state 12

    (2) exp -> float_exp .
    (34) float_exp -> float_exp . PLUS frac_term
    (35) float_exp -> float_exp . MINUS frac_term
    (36) float_exp -> float_exp . PLUS float_term
    (37) float_exp -> float_exp . MINUS float_term

    $end            reduce using rule 2 (exp -> float_exp .)
    RPAREN          reduce using rule 2 (exp -> float_exp .)
    COMMA           reduce using rule 2 (exp -> float_exp .)
    PLUS            shift and go to state 61
    MINUS           shift and go to state 60


state 13

    (38) float_exp -> float_term .
    (41) float_term -> float_term . TIMES frac_atom
    (42) float_term -> float_term . DIVIDE frac_atom
    (43) float_term -> float_term . TIMES float_atom
    (44) float_term -> float_term . DIVIDE float_atom

    PLUS            reduce using rule 38 (float_exp -> float_term .)
    MINUS           reduce using rule 38 (float_exp -> float_term .)
    $end            reduce using rule 38 (float_exp -> float_term .)
    RPAREN          reduce using rule 38 (float_exp -> float_term .)
    COMMA           reduce using rule 38 (float_exp -> float_term .)
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 62


state 14

    (62) vector_cross -> vector .
    (78) num -> vector . vector
    (63) vector -> . vector_builder RBRACK
    (64) vector_builder -> . vector_builder COMMA num
    (65) vector_builder -> . LBRACK num

    TIMES           reduce using rule 62 (vector_cross -> vector .)
    PLUS            reduce using rule 62 (vector_cross -> vector .)
    MINUS           reduce using rule 62 (vector_cross -> vector .)
    RPAREN          reduce using rule 62 (vector_cross -> vector .)
    COMMA           reduce using rule 62 (vector_cross -> vector .)
    $end            reduce using rule 62 (vector_cross -> vector .)
    LBRACK          shift and go to state 19

    vector                         shift and go to state 64
    vector_builder                 shift and go to state 20

state 15

    (12) lstsq_exp -> LS . point_list
    (13) lstsq_exp -> LS . MINUS point_list
    (66) point_list -> . point_list_builder RBRACK
    (67) point_list_builder -> . point_list_builder COMMA LPAREN num COMMA num RPAREN
    (68) point_list_builder -> . LBRACK LPAREN num COMMA num RPAREN

    MINUS           shift and go to state 66
    LBRACK          shift and go to state 46

    point_list_builder             shift and go to state 49
    point_list                     shift and go to state 65

state 16

    (20) frac_atom -> int_function .

    TIMES           reduce using rule 20 (frac_atom -> int_function .)
    DIVIDE          reduce using rule 20 (frac_atom -> int_function .)
    PLUS            reduce using rule 20 (frac_atom -> int_function .)
    MINUS           reduce using rule 20 (frac_atom -> int_function .)
    $end            reduce using rule 20 (frac_atom -> int_function .)
    RPAREN          reduce using rule 20 (frac_atom -> int_function .)
    COMMA           reduce using rule 20 (frac_atom -> int_function .)


state 17

    (16) frac_exp -> frac_term .
    (17) frac_term -> frac_term . TIMES frac_atom
    (18) frac_term -> frac_term . DIVIDE frac_atom
    (39) float_term -> frac_term . TIMES float_atom
    (40) float_term -> frac_term . DIVIDE float_atom

    PLUS            reduce using rule 16 (frac_exp -> frac_term .)
    MINUS           reduce using rule 16 (frac_exp -> frac_term .)
    $end            reduce using rule 16 (frac_exp -> frac_term .)
    RPAREN          reduce using rule 16 (frac_exp -> frac_term .)
    COMMA           reduce using rule 16 (frac_exp -> frac_term .)
    TIMES           shift and go to state 68
    DIVIDE          shift and go to state 67


state 18

    (25) poly_exp -> poly_term .
    (28) poly_term -> poly_term . TIMES poly_atom

    PLUS            reduce using rule 25 (poly_exp -> poly_term .)
    MINUS           reduce using rule 25 (poly_exp -> poly_term .)
    RPAREN          reduce using rule 25 (poly_exp -> poly_term .)
    COMMA           reduce using rule 25 (poly_exp -> poly_term .)
    $end            reduce using rule 25 (poly_exp -> poly_term .)
    TIMES           shift and go to state 69


state 19

    (65) vector_builder -> LBRACK . num
    (69) num -> . INT
    (70) num -> . FLOAT
    (71) num -> . fraction_expr
    (72) num -> . MINUS INT
    (73) num -> . MINUS FLOAT
    (74) num -> . MINUS fraction_expr
    (75) num -> . INT EXL
    (76) num -> . num EXP INT
    (77) num -> . num EXP MINUS INT
    (78) num -> . vector vector
    (54) fraction_expr -> . FRAC LPAREN frac_exp COMMA frac_exp RPAREN
    (63) vector -> . vector_builder RBRACK
    (64) vector_builder -> . vector_builder COMMA num
    (65) vector_builder -> . LBRACK num

    INT             shift and go to state 23
    FLOAT           shift and go to state 36
    MINUS           shift and go to state 5
    FRAC            shift and go to state 8
    LBRACK          shift and go to state 19

    num                            shift and go to state 70
    vector                         shift and go to state 42
    vector_builder                 shift and go to state 20
    fraction_expr                  shift and go to state 21

state 20

    (63) vector -> vector_builder . RBRACK
    (64) vector_builder -> vector_builder . COMMA num

    RBRACK          shift and go to state 71
    COMMA           shift and go to state 72


state 21

    (71) num -> fraction_expr .
